20071009: Documentation now clearly identifies its Qtstalker version. Thanks to xley.

20071010: Improved installation doc to show where stuff is installed and where user preferences are kept. Thanks to xley.

20071010: Improved the docs with deliberately basic CSS. Thanks to xley.

20071018: The "Auto Reload" of the CSV Quote plugin was not working. Thanks to xley.

20071023: Improved installation doc to warn about non-standard installation of TA-Lib. Thanks to xley.

20071025: If there is only one chart in a list, then select it automatically. Thanks to xley.

20071101: Prevent accidental zero bars to load. Thanks to xley.

20071102: Fixed the Yahoo Quote "adjustment" option which was not being applied. Thanks to dormilon and friend.

20071113: Enable quick access to "Recent Charts". Thanks to xley.

20071113: Optional "Extra Toolbar" which currently only has "Recent Charts". Thanks to xley.

20071128: Improved installation docs. Added important notes about ensuring that 'qmake' and friends, and 'ta-lib-config', are available on your $PATH. Improved notes about Apple Mac installation. Thanks to xley.